Added code to wipe profile after failed login attempt.
Signed-off-by: agreenbhm <agreenbhm@gmail.com>

--- a/engine/src/main/res/xml/device_admin.xml
+++ b/engine/src/main/res/xml/device_admin.xml
@@ -6,7 +6,7 @@
         <disable-camera/>
         <disable-keyguard-features/>
         <!--<encrypted-storage/>-->
-        <!--<watch-login/>-->
+        <watch-login/>
         <!--<limit-password/>-->
         <!--<expire-password/>-->
         <!--<reset-password/>-->
