--- a/mobile/src/main/res/xml/pref_island.xml
+++ b/mobile/src/main/res/xml/pref_island.xml
@@ -58,6 +58,11 @@
             android:title="@string/pref_destroy_title"
             android:summary="@string/pref_destroy_summary" />
 
+        <Preference
+            android:key="@string/key_password"
+            android:title="@string/pref_password_title"
+            android:summary="@string/pref_password_summary" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
