Added settings to configure wipe preferences.

--- a/mobile/src/main/res/values/preferences.xml
+++ b/mobile/src/main/res/values/preferences.xml
@@ -17,6 +17,9 @@
     <string translatable="false" name="key_reprovision">reprovision</string>
     <string translatable="false" name="key_destroy">destroy</string>
     <string translatable="false" name="key_password">password</string>
+    <string translatable="false" name="key_password_failures">password-failures</string>
+    <string translatable="false" name="key_parent_password_failures">parent-password-failures</string>
+
     <!-- Privacy -->
     <string translatable="false" name="key_privacy_notification_for_clone">privacy_notification_clone</string>
     <!-- About -->
