--- a/mobile/src/main/res/xml/pref_island.xml
+++ b/mobile/src/main/res/xml/pref_island.xml
@@ -44,6 +44,11 @@
             android:title="@string/notification_channel_app_watcher"
             android:summary="@string/pref_app_watcher_summary" />
 
+        <SwitchPreference
+            android:key="disallow-copy-paste"
+            android:title="Disallow Cross-Profile Copy/Paste"
+            android:summary="@string/pref_disallow_copy_paste_summary" />
+
     </PreferenceCategory>
 
     <PreferenceCategory android:key="@string/key_setup" android:title="@string/pref_setup_header">
